--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@finwo/lgfec",
   "version": "0.1.0",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "node build.js",
     "test": "npx -y ts-node test/main.ts"
